// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menubar > renders correctly with checkbox menus 1`] = `
<div>
  <div
    class="flex items-center gap-1"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="0"
  >
    
    
    
    
    
    
    <button
      aria-controls="reka-menubar-content-v-2"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-highlighted=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="open"
      data-value="reka-v-0"
      id="reka-v-0"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        View
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <div
      data-reka-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(8px, 40px); min-width: max-content; --reka-popper-transform-origin: 0% 0px; z-index: auto; --reka-popper-available-width: 398px; --reka-popper-available-height: 848px; --reka-popper-anchor-width: 49.525001525878906px; --reka-popper-anchor-height: 32px;"
    >
      <div
        aria-labelledby="reka-v-0"
        aria-orientation="vertical"
        class="pointer-events-auto min-w-32 origin-(--reka-menubar-content-transform-origin) divide-y divide-default overflow-hidden rounded-md bg-default shadow-lg ring ring-default focus:outline-none data-[state=closed]:animate-[scale-out_100ms_ease-in] data-[state=open]:animate-[scale-in_100ms_ease-out]"
        data-align="start"
        data-dismissable-layer=""
        data-orientation="vertical"
        data-reka-menu-content=""
        data-reka-menubar-content=""
        data-side="bottom"
        data-slot="content"
        data-state="open"
        dir="ltr"
        id="reka-menubar-content-v-2"
        role="menu"
        style="--reka-menubar-content-transform-origin: var(--reka-popper-transform-origin); --reka-menubar-content-available-width: var(--reka-popper-available-width); --reka-menubar-content-available-height: var(--reka-popper-available-height); --reka-menubar-trigger-width: var(--reka-popper-anchor-width); --reka-menubar-trigger-height: var(--reka-popper-anchor-height); outline: none;"
        tabindex="-1"
      >
        
        
        
        
        
        
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="flex w-full items-center font-semibold gap-1.5 p-1.5 text-sm"
            data-slot="label"
          >
            
            
            Display
            
            
          </div>
          
          
          <div
            aria-orientation="horizontal"
            class="-mx-1 my-1 h-px bg-border"
            data-slot="separator"
            role="separator"
          >
            
            
          </div>
          
          
          <div
            aria-checked="true"
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            data-state="checked"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            
            
            
            
            <span
              class="truncate"
              data-slot="itemLabel"
            >
              Show Grid
            </span>
            <svg
              aria-hidden="true"
              class="ms-auto inline-flex items-center shrink-0 size-5"
              data-slot="itemTrailingIcon"
              data-state="checked"
              height="1em"
              role="img"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            />
            
            
            
            
          </div>
          
          
          <div
            aria-checked="false"
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            data-state="unchecked"
            role="menuitemcheckbox"
            tabindex="-1"
          >
            
            
            
            
            <span
              class="truncate"
              data-slot="itemLabel"
            >
              Show Rulers
            </span>
            <!---->
            
            
            
            
          </div>
          
          
          
          
        </div>
        
        
        
        
        
        
      </div>
    </div>
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;

exports[`Menubar > renders correctly with class 1`] = `
<div>
  <div
    class="flex items-center gap-1"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="0"
  >
    
    
    
    
    
    
    <button
      aria-controls="reka-menubar-content-v-4"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-highlighted=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="open"
      data-value="reka-v-0"
      id="reka-v-0"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        File
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <div
      data-reka-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(8px, 40px); min-width: max-content; --reka-popper-transform-origin: 0% 0px; z-index: auto; --reka-popper-available-width: 398px; --reka-popper-available-height: 848px; --reka-popper-anchor-width: 40.95000076293945px; --reka-popper-anchor-height: 32px;"
    >
      <div
        aria-labelledby="reka-v-0"
        aria-orientation="vertical"
        class="pointer-events-auto origin-(--reka-menubar-content-transform-origin) divide-y divide-default overflow-hidden rounded-md bg-default shadow-lg ring ring-default focus:outline-none data-[state=closed]:animate-[scale-out_100ms_ease-in] data-[state=open]:animate-[scale-in_100ms_ease-out] min-w-48"
        data-align="start"
        data-dismissable-layer=""
        data-orientation="vertical"
        data-reka-menu-content=""
        data-reka-menubar-content=""
        data-side="bottom"
        data-slot="content"
        data-state="open"
        dir="ltr"
        id="reka-menubar-content-v-4"
        role="menu"
        style="--reka-menubar-content-transform-origin: var(--reka-popper-transform-origin); --reka-menubar-content-available-width: var(--reka-popper-available-width); --reka-menubar-content-available-height: var(--reka-popper-available-height); --reka-menubar-trigger-width: var(--reka-popper-anchor-width); --reka-menubar-trigger-height: var(--reka-popper-anchor-height); outline: none;"
        tabindex="-1"
      >
        
        
        
        
        
        
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                New
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+N
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Open
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+O
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Save
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+S
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        
        
        
        
        
        
      </div>
    </div>
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="closed"
      data-value="reka-v-2"
      id="reka-v-2"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        Edit
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <!---->
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;

exports[`Menubar > renders correctly with disabled menu 1`] = `
<div>
  <div
    class="flex items-center gap-1"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="-1"
  >
    
    
    
    
    
    
    <button
      aria-disabled="true"
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-disabled=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="closed"
      data-value="reka-v-0"
      disabled=""
      id="reka-v-0"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        File
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <!---->
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;

exports[`Menubar > renders correctly with simple menus 1`] = `
<div>
  <div
    class="flex items-center gap-1"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="0"
  >
    
    
    
    
    
    
    <button
      aria-controls="reka-menubar-content-v-4"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-highlighted=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="open"
      data-value="reka-v-0"
      id="reka-v-0"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        File
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <div
      data-reka-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(8px, 40px); min-width: max-content; --reka-popper-transform-origin: 0% 0px; z-index: auto; --reka-popper-available-width: 398px; --reka-popper-available-height: 848px; --reka-popper-anchor-width: 40.95000076293945px; --reka-popper-anchor-height: 32px;"
    >
      <div
        aria-labelledby="reka-v-0"
        aria-orientation="vertical"
        class="pointer-events-auto min-w-32 origin-(--reka-menubar-content-transform-origin) divide-y divide-default overflow-hidden rounded-md bg-default shadow-lg ring ring-default focus:outline-none data-[state=closed]:animate-[scale-out_100ms_ease-in] data-[state=open]:animate-[scale-in_100ms_ease-out]"
        data-align="start"
        data-dismissable-layer=""
        data-orientation="vertical"
        data-reka-menu-content=""
        data-reka-menubar-content=""
        data-side="bottom"
        data-slot="content"
        data-state="open"
        dir="ltr"
        id="reka-menubar-content-v-4"
        role="menu"
        style="--reka-menubar-content-transform-origin: var(--reka-popper-transform-origin); --reka-menubar-content-available-width: var(--reka-popper-available-width); --reka-menubar-content-available-height: var(--reka-popper-available-height); --reka-menubar-trigger-width: var(--reka-popper-anchor-width); --reka-menubar-trigger-height: var(--reka-popper-anchor-height); outline: none;"
        tabindex="-1"
      >
        
        
        
        
        
        
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                New
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+N
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Open
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+O
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Save
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+S
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        
        
        
        
        
        
      </div>
    </div>
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="closed"
      data-value="reka-v-2"
      id="reka-v-2"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        Edit
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <!---->
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;

exports[`Menubar > renders correctly with size lg 1`] = `
<div>
  <div
    class="flex items-center gap-1"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="0"
  >
    
    
    
    
    
    
    <button
      aria-controls="reka-menubar-content-v-4"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-2 px-3 py-2 text-base text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-highlighted=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="open"
      data-value="reka-v-0"
      id="reka-v-0"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        File
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <div
      data-reka-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(8px, 48px); min-width: max-content; --reka-popper-transform-origin: 0% 0px; z-index: auto; --reka-popper-available-width: 398px; --reka-popper-available-height: 840px; --reka-popper-anchor-width: 47.9375px; --reka-popper-anchor-height: 40px;"
    >
      <div
        aria-labelledby="reka-v-0"
        aria-orientation="vertical"
        class="pointer-events-auto min-w-32 origin-(--reka-menubar-content-transform-origin) divide-y divide-default overflow-hidden rounded-md bg-default shadow-lg ring ring-default focus:outline-none data-[state=closed]:animate-[scale-out_100ms_ease-in] data-[state=open]:animate-[scale-in_100ms_ease-out]"
        data-align="start"
        data-dismissable-layer=""
        data-orientation="vertical"
        data-reka-menu-content=""
        data-reka-menubar-content=""
        data-side="bottom"
        data-slot="content"
        data-state="open"
        dir="ltr"
        id="reka-menubar-content-v-4"
        role="menu"
        style="--reka-menubar-content-transform-origin: var(--reka-popper-transform-origin); --reka-menubar-content-available-width: var(--reka-popper-available-width); --reka-menubar-content-available-height: var(--reka-popper-available-height); --reka-menubar-trigger-width: var(--reka-popper-anchor-width); --reka-menubar-trigger-height: var(--reka-popper-anchor-height); outline: none;"
        tabindex="-1"
      >
        
        
        
        
        
        
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-2 p-2 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                New
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+N
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-2 p-2 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Open
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+O
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-2 p-2 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Save
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+S
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        
        
        
        
        
        
      </div>
    </div>
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-2 px-3 py-2 text-base text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="closed"
      data-value="reka-v-2"
      id="reka-v-2"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        Edit
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <!---->
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;

exports[`Menubar > renders correctly with size md 1`] = `
<div>
  <div
    class="flex items-center gap-1"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="0"
  >
    
    
    
    
    
    
    <button
      aria-controls="reka-menubar-content-v-4"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-highlighted=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="open"
      data-value="reka-v-0"
      id="reka-v-0"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        File
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <div
      data-reka-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(8px, 40px); min-width: max-content; --reka-popper-transform-origin: 0% 0px; z-index: auto; --reka-popper-available-width: 398px; --reka-popper-available-height: 848px; --reka-popper-anchor-width: 40.95000076293945px; --reka-popper-anchor-height: 32px;"
    >
      <div
        aria-labelledby="reka-v-0"
        aria-orientation="vertical"
        class="pointer-events-auto min-w-32 origin-(--reka-menubar-content-transform-origin) divide-y divide-default overflow-hidden rounded-md bg-default shadow-lg ring ring-default focus:outline-none data-[state=closed]:animate-[scale-out_100ms_ease-in] data-[state=open]:animate-[scale-in_100ms_ease-out]"
        data-align="start"
        data-dismissable-layer=""
        data-orientation="vertical"
        data-reka-menu-content=""
        data-reka-menubar-content=""
        data-side="bottom"
        data-slot="content"
        data-state="open"
        dir="ltr"
        id="reka-menubar-content-v-4"
        role="menu"
        style="--reka-menubar-content-transform-origin: var(--reka-popper-transform-origin); --reka-menubar-content-available-width: var(--reka-popper-available-width); --reka-menubar-content-available-height: var(--reka-popper-available-height); --reka-menubar-trigger-width: var(--reka-popper-anchor-width); --reka-menubar-trigger-height: var(--reka-popper-anchor-height); outline: none;"
        tabindex="-1"
      >
        
        
        
        
        
        
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                New
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+N
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Open
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+O
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Save
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+S
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        
        
        
        
        
        
      </div>
    </div>
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="closed"
      data-value="reka-v-2"
      id="reka-v-2"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        Edit
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <!---->
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;

exports[`Menubar > renders correctly with size sm 1`] = `
<div>
  <div
    class="flex items-center gap-1"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="0"
  >
    
    
    
    
    
    
    <button
      aria-controls="reka-menubar-content-v-4"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1 px-2 py-1 text-xs text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-highlighted=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="open"
      data-value="reka-v-0"
      id="reka-v-0"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        File
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <div
      data-reka-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(8px, 32px); min-width: max-content; --reka-popper-transform-origin: 0% 0px; z-index: auto; --reka-popper-available-width: 398px; --reka-popper-available-height: 856.0124988555908px; --reka-popper-anchor-width: 33.95000076293945px; --reka-popper-anchor-height: 23.98750114440918px;"
    >
      <div
        aria-labelledby="reka-v-0"
        aria-orientation="vertical"
        class="pointer-events-auto min-w-32 origin-(--reka-menubar-content-transform-origin) divide-y divide-default overflow-hidden rounded-md bg-default shadow-lg ring ring-default focus:outline-none data-[state=closed]:animate-[scale-out_100ms_ease-in] data-[state=open]:animate-[scale-in_100ms_ease-out]"
        data-align="start"
        data-dismissable-layer=""
        data-orientation="vertical"
        data-reka-menu-content=""
        data-reka-menubar-content=""
        data-side="bottom"
        data-slot="content"
        data-state="open"
        dir="ltr"
        id="reka-menubar-content-v-4"
        role="menu"
        style="--reka-menubar-content-transform-origin: var(--reka-popper-transform-origin); --reka-menubar-content-available-width: var(--reka-popper-available-width); --reka-menubar-content-available-height: var(--reka-popper-available-height); --reka-menubar-trigger-width: var(--reka-popper-anchor-width); --reka-menubar-trigger-height: var(--reka-popper-anchor-height); outline: none;"
        tabindex="-1"
      >
        
        
        
        
        
        
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1 p-1 text-xs"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                New
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+N
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1 p-1 text-xs"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Open
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+O
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1 p-1 text-xs"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Save
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+S
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        
        
        
        
        
        
      </div>
    </div>
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1 px-2 py-1 text-xs text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="closed"
      data-value="reka-v-2"
      id="reka-v-2"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        Edit
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <!---->
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;

exports[`Menubar > renders correctly with submenu menus 1`] = `
<div>
  <div
    class="flex items-center gap-1"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="0"
  >
    
    
    
    
    
    
    <button
      aria-controls="reka-menubar-content-v-2"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
      data-highlighted=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="open"
      data-value="reka-v-0"
      id="reka-v-0"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        Tools
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <div
      data-reka-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(8px, 40px); min-width: max-content; --reka-popper-transform-origin: 0% 0px; z-index: auto; --reka-popper-available-width: 398px; --reka-popper-available-height: 848px; --reka-popper-anchor-width: 51.712501525878906px; --reka-popper-anchor-height: 32px;"
    >
      <div
        aria-labelledby="reka-v-0"
        aria-orientation="vertical"
        class="pointer-events-auto min-w-32 origin-(--reka-menubar-content-transform-origin) divide-y divide-default overflow-hidden rounded-md bg-default shadow-lg ring ring-default focus:outline-none data-[state=closed]:animate-[scale-out_100ms_ease-in] data-[state=open]:animate-[scale-in_100ms_ease-out]"
        data-align="start"
        data-dismissable-layer=""
        data-orientation="vertical"
        data-reka-menu-content=""
        data-reka-menubar-content=""
        data-side="bottom"
        data-slot="content"
        data-state="open"
        dir="ltr"
        id="reka-menubar-content-v-2"
        role="menu"
        style="--reka-menubar-content-transform-origin: var(--reka-popper-transform-origin); --reka-menubar-content-available-width: var(--reka-popper-available-width); --reka-menubar-content-available-height: var(--reka-popper-available-height); --reka-menubar-trigger-width: var(--reka-popper-anchor-width); --reka-menubar-trigger-height: var(--reka-popper-anchor-height); outline: none;"
        tabindex="-1"
      >
        
        
        
        
        
        
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          
          
          
          <div
            aria-controls="reka-menu-sub-content-v-4"
            aria-expanded="false"
            aria-haspopup="menu"
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-reka-menubar-subtrigger=""
            data-slot="item"
            data-state="closed"
            id="reka-menu-sub-trigger-v-3"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="truncate"
              data-slot="itemLabel"
            >
              More Tools
            </span>
            <span
              class="ms-auto inline-flex items-center"
              data-slot="itemTrailing"
            >
              <svg
                aria-hidden="true"
                class="shrink-0 size-5"
                data-slot="itemTrailingIcon"
                height="1em"
                role="img"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
                xmlns:xlink="http://www.w3.org/1999/xlink"
              />
            </span>
            
            
            
          </div>
          <!--teleport start-->
          
          
          
          <!---->
          
          
          
          <!--teleport end-->
          
          
          
          
          
          
          
        </div>
        
        
        
        
        
        
      </div>
    </div>
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;

exports[`Menubar > renders correctly with ui 1`] = `
<div>
  <div
    class="flex items-center gap-1 bg-default"
    data-orientation="horizontal"
    data-slot="root"
    dir="ltr"
    role="menubar"
    style="outline: none;"
    tabindex="0"
  >
    
    
    
    
    
    
    <button
      aria-controls="reka-menubar-content-v-4"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated font-bold"
      data-highlighted=""
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="open"
      data-value="reka-v-0"
      id="reka-v-0"
      role="menuitem"
      tabindex="0"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        File
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <div
      data-reka-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate(8px, 40px); min-width: max-content; --reka-popper-transform-origin: 0% 0px; z-index: auto; --reka-popper-available-width: 398px; --reka-popper-available-height: 848px; --reka-popper-anchor-width: 42.8125px; --reka-popper-anchor-height: 32px;"
    >
      <div
        aria-labelledby="reka-v-0"
        aria-orientation="vertical"
        class="pointer-events-auto min-w-32 origin-(--reka-menubar-content-transform-origin) divide-y divide-default overflow-hidden rounded-md bg-default shadow-lg ring ring-default focus:outline-none data-[state=closed]:animate-[scale-out_100ms_ease-in] data-[state=open]:animate-[scale-in_100ms_ease-out]"
        data-align="start"
        data-dismissable-layer=""
        data-orientation="vertical"
        data-reka-menu-content=""
        data-reka-menubar-content=""
        data-side="bottom"
        data-slot="content"
        data-state="open"
        dir="ltr"
        id="reka-menubar-content-v-4"
        role="menu"
        style="--reka-menubar-content-transform-origin: var(--reka-popper-transform-origin); --reka-menubar-content-available-width: var(--reka-popper-available-width); --reka-menubar-content-available-height: var(--reka-popper-available-height); --reka-menubar-trigger-width: var(--reka-popper-anchor-width); --reka-menubar-trigger-height: var(--reka-popper-anchor-height); outline: none;"
        tabindex="-1"
      >
        
        
        
        
        
        
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                New
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+N
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Open
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+O
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        <div
          class="isolate p-1"
          data-slot="group"
          role="group"
        >
          
          
          
          
          <div
            class="group relative flex w-full cursor-pointer items-center rounded-sm text-default outline-none select-none before:absolute before:inset-px before:z-[-1] before:rounded-md data-disabled:cursor-not-allowed data-disabled:opacity-75 data-highlighted:before:bg-elevated/50 gap-1.5 p-1.5 text-sm"
            data-reka-collection-item=""
            data-slot="item"
            role="menuitem"
            tabindex="-1"
          >
            
            
            
            <!--v-if-->
            <span
              class="flex min-w-0 flex-1 flex-col"
            >
              <span
                class="truncate"
                data-slot="itemLabel"
              >
                Save
              </span>
              <!--v-if-->
            </span>
            <span
              class="ms-auto inline-flex items-center flex items-center gap-0.5"
              data-slot="itemTrailing"
            >
              
              <kbd
                class="inline-flex items-center justify-center rounded-sm bg-default px-1 font-sans font-medium text-default ring ring-accented ring-inset h-4 min-w-4 text-[10px]"
                data-slot="base"
              >
                Ctrl+S
              </kbd>
              
            </span>
            
            
            
          </div>
          
          
          
          
        </div>
        
        
        
        
        
        
      </div>
    </div>
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-1.5 px-2.5 py-1.5 text-sm text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated font-bold"
      data-orientation="horizontal"
      data-reka-collection-item=""
      data-slot="trigger"
      data-state="closed"
      data-value="reka-v-2"
      id="reka-v-2"
      role="menuitem"
      tabindex="-1"
      type="button"
    >
      
      <!--v-if-->
      
      
      <span
        class="truncate"
        data-slot="label"
      >
        Edit
      </span>
      
      
      <!--v-if-->
      
    </button>
    <!--teleport start-->
    
    
    
    <!---->
    
    
    
    <!--teleport end-->
    
    
    
    
    
    
  </div>
</div>
`;
